# incidents-api-pro

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  postman_collection.json  pyproject.toml  requirements.txt
app/: settings.py
app/adapters/: db.py  orm.py  repo.py
app/domain/: errors.py  models.py  rules.py
app/entrypoints/: api.py
app/entrypoints/routes/: health.py  incidents.py
app/schemas/: incidents.py
app/services/: incidents.py
bot/: Dockerfile  main.py  requirements.txt
migrations/: env.py
migrations/versions/: 20251108_133921_create_incidents.py
tests/: conftest.py
tests/integration/: test_incidents_api.py
