[project]
name = "incidents-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "SQLAlchemy==2.0.30",
  "pydantic==2.8.2",
  "pydantic-settings>=2.3.0",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.2",
  "prometheus-client>=0.20.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
